--- a/we-will-call-you/i18n/wewillcallyou-es_ES.po
+++ b/we-will-call-you/i18n/wewillcallyou-es_ES.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: we-will-call-you\n"
 "POT-Creation-Date: 2015-11-14 18:00+0100\n"
-"PO-Revision-Date: 2015-11-14 18:00+0100\n"
+"PO-Revision-Date: 2017-05-18 09:14+0200\n"
 "Last-Translator: Víctor J. Chamorro <victor@ipdea.com>\n"
-"Language-Team:  <info@teenvio.com>\n"
+"Language-Team: info@teenvio.com\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.10\n"
-"X-Poedit-Basepath: ../\n"
+"X-Generator: Poedit 1.8.7\n"
+"X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;__#\n"
@@ -34,7 +34,7 @@ msgstr "Enviar"
 
 #: ../we-will-call-you/we-will-call-you.php:29
 msgid "conditions"
-msgstr "política de privacidad"
+msgstr "Política de Privacidad"
 
 #: ../we-will-call-you/we-will-call-you.php:30
 msgid "acept the"
@@ -43,8 +43,8 @@ msgstr "Acepto la"
 #: ../we-will-call-you/we-will-call-you.php:31
 msgid "send_thanks"
 msgstr ""
-"Gracias! Nos pondremos en contacto en cuando podamos. (Llamadas dentro del "
-"horario de 9:00 a 18:00h CET)"
+"Nos pondremos en contacto lo antes posible. (Llamadas de 8:30 a 18:30h "
+"CET)"
 
 #: ../we-will-call-you/we-will-call-you.php:54
 msgid "save"
@@ -72,11 +72,15 @@ msgstr "Enviar por correo electrónico y guardar en aplicación externa"
 
 #: ../we-will-call-you/we-will-call-you.php:60
 msgid "conditions_url"
-msgstr "Dirección url de la política de privacidad"
+msgstr "Dirección URL de la política de privacidad"
 
 #: ../we-will-call-you/we-will-call-you.php:61
 msgid "email_alert"
 msgstr "Dirección de email para los avisos"
+
+#: ../we-will-call-you/we-will-call-you.php:62
+msgid "thanks_message"
+msgstr "Mensaje de agradecimiento"
 
 #: ../we-will-call-you/we-will-call-you.php:62
 msgid "teenvio_user"
